# playwright_automation_framework

./: .gitignore  README.md  pyproject.toml
config/: config.ini
page_objects/: customer_profile_page.py  login_page.py  manager_add_customer_page.py  manager_customers_page.py  manager_profile_page.py  navigation_elements.py  page_object_template.py  transactions_page.py
test_data/: login_test.json  new_customers_data.json  transactions_data.json
tests/: conftest.py  test_suite.py
utils/: config_adapter.py  logging_adapter.py  page_event_logging.py  path_utils.py  settings_adapter.py  settings_manager.py  test_data_adapter.py  video_manager.py
